WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
90356
Style not updated for element with display:none becoming first/last-child
https://bugs.webkit.org/show_bug.cgi?id=90356
Summary
Style not updated for element with display:none becoming first/last-child
dstockwell
Reported
2012-07-01 21:27:15 PDT
When an element marked as display:none becomes the first/last-child (eg. when a sibling is removed), its style is not recalculated. The element would not be rendered even if the style change would have caused it to become visible. Reported in Chromium:
http://code.google.com/p/chromium/issues/detail?id=115257
Attachments
Patch
(5.38 KB, patch)
2012-07-01 21:32 PDT
,
dstockwell
no flags
Details
Formatted Diff
Diff
Patch
(7.85 KB, patch)
2012-07-10 21:20 PDT
,
dstockwell
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
dstockwell
Comment 1
2012-07-01 21:32:50 PDT
Created
attachment 150356
[details]
Patch
noel gordon
Comment 2
2012-07-10 21:03:12 PDT
Doug, nice tests. Do you know if the opposite case works? An element that has a matching last- or first-child style rule is updated when the DOM changes such that the element no longer matches that rule.
dstockwell
Comment 3
2012-07-10 21:20:52 PDT
Created
attachment 151586
[details]
Patch
noel gordon
Comment 4
2012-07-10 21:25:25 PDT
Ah the inverse tests. LGTM.
Kent Tamura
Comment 5
2012-07-10 23:06:29 PDT
Comment on
attachment 151586
[details]
Patch ok
WebKit Review Bot
Comment 6
2012-07-10 23:23:19 PDT
Comment on
attachment 151586
[details]
Patch Clearing flags on attachment: 151586 Committed
r122302
: <
http://trac.webkit.org/changeset/122302
>
WebKit Review Bot
Comment 7
2012-07-10 23:23:23 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug