Style not updated for element with display:none becoming first/last-child https://bugs.webkit.org/show_bug.cgi?id=90356

Patch by Douglas Stockwell <dstockwell@chromium.org> on 2012-07-10
Reviewed by Kent Tamura.

Source/WebCore:

Always trigger style recalc when an element without a renderer becomes the first/last-child.

Tests: fast/css/first-child-display-change.html
       fast/css/last-child-display-change.html

* dom/Element.cpp:
(WebCore::checkForSiblingStyleChanges):

LayoutTests:

* fast/css/first-child-display-change-expected.txt: Added.
* fast/css/first-child-display-change-inverse-expected.txt: Added.
* fast/css/first-child-display-change-inverse.html: Added.
* fast/css/first-child-display-change.html: Added.
* fast/css/last-child-display-change-expected.txt: Added.
* fast/css/last-child-display-change-inverse-expected.txt: Added.
* fast/css/last-child-display-change-inverse.html: Added.
* fast/css/last-child-display-change.html: Added.

Canonical link: https://commits.webkit.org/108778@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122302 268f45cc-cd09-0410-ab3c-d52691b4dbfc